fix: iframe overflowing and blocked by toc

--- a/assets/css/components/_markdown.scss
+++ b/assets/css/components/_markdown.scss
@@ -137,4 +137,8 @@ $em-text-color: #889E73;
   del {
       opacity: 0.5
   }
+
+  iframe {
+      max-width: 100%;
+  }
 }
