--- a/assets/css/utils/_utility.scss
+++ b/assets/css/utils/_utility.scss
@@ -32,6 +32,8 @@ figure {
   display: flex;
   justify-content: center;
   width: 100%;
+  z-index: 10;
+  position: relative;
 
   @media screen and (min-width: 768px) {
     width: calc(var(--page-width) + 10rem);
